--- a/sh4llocator/chal/.vscode/settings.json
+++ b/sh4llocator/chal/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode"
+    "makefile.extensionOutputFolder": "./.vscode",
+    "files.associations": {
+        "types.h": "c",
+        "mman.h": "c"
+    }
 }
