--- a/sh4llocator/chal/.vscode/settings.json
+++ b/sh4llocator/chal/.vscode/settings.json
@@ -2,6 +2,8 @@
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
         "types.h": "c",
-        "mman.h": "c"
+        "mman.h": "c",
+        "sh4llocator.h": "c",
+        "string.h": "c"
     }
 }
