--- a/how2pwn/public/docker-compose.yml
+++ b/how2pwn/public/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         volumes: 
             - "./bin/chal:/home/ctf/chal:ro"
             - "./bin/flag:/home/ctf/flag:ro"
+            - "./bin/ticket:/home/ctf/ticket:ro"
             - "./ctf.xinetd:/etc/xinetd.d/ctf:ro"
             - "./tmp:/tmp:ro"
         ports:
