--- a/CryPtown/chal/makefile
+++ b/CryPtown/chal/makefile
@@ -1,2 +1,2 @@
 cryptown: cryptown.c base64.c utils.c
-	gcc ./cryptown.c ./base64.c ./utils.c -o ./cryptown
+	gcc ./cryptown.c ./base64.c ./utils.c -o ./cryptown -s
