--- a/sh4llocator/chal/Makefile
+++ b/sh4llocator/chal/Makefile
@@ -1,2 +1,2 @@
 all: sh4llocator.c
-	gcc ./sh4llocator.c -o ./sh4llocator -I ./bash-9439ce094c9aa7557a9d53ac7b412a23aa66e36b/lib
+	gcc ./sh4llocator.c -o ./sh4llocator -I ./bash-9439ce094c9aa7557a9d53ac7b412a23aa66e36b/lib -s
