--- a/unsafe-linking/Dockerize/chal/Dockerfile
+++ b/unsafe-linking/Dockerize/chal/Dockerfile
@@ -22,7 +22,8 @@ RUN mkdir /home/ctf/dev && \
 RUN mkdir /home/ctf/bin && \
     cp /bin/sh /home/ctf/bin && \
     cp /bin/ls /home/ctf/bin && \
-    cp /bin/cat /home/ctf/bin
+    cp /bin/cat /home/ctf/bin && \
+    cp /usr/bin/timeout /home/ctf/bin
 
 # COPY ./ctf.xinetd /etc/xinetd.d/ctf
 COPY ./start.sh /start.sh
